Ajout de la section article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 /* Classes utilitaires */
 
+.container{
+    max-width: 95vw;
+    margin: auto;
+}
+
 .font-size-1{
     font-size: 1.2em;
 }
@@ -22,6 +27,8 @@
     height: 2px;
     background-color: #808080;
 }
+
+/* ======= Navbar ================ */
 
 .navbar{
     padding: 0;
@@ -68,7 +75,9 @@ nav form.form-inline input::placeholder{
     font-weight: 600;
 }
 
-.container{
-    max-width: 95vw;
-    margin: auto;
-}
+
+/* ============== Articles =============== */
+
+/* .local-article > .d-flex > div{
+    width: 20%;
+} */
