Ajout de la section newspaper

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,3 +1,21 @@
+/* ========= utilitaires ========== */
+
+.font-size-1{
+    font-size: .7em;
+}
+
+.font-size-2{
+    font-size: .9em;
+}
+
+.font-size-3{
+    font-size: .4em;
+}
+
+.bg-gray{
+    background-color: #f5ededf6;
+}
+
 /* ============ Header ========== */
 
 .divider{
@@ -7,5 +25,4 @@
 
 .nav-mobile > a{
     height: 4vh;
-    font-size: .7em;
 }
