--- a/mobile/css/mobil.css
+++ b/mobile/css/mobil.css
@@ -7,6 +7,10 @@
     font-size: 0.9rem;
     color: #1C8ADE;
   }
+
+  .h3>.img{
+  	width: 80px;
+  }
   .h2 span{
 	font-weight: bold;
   }  
@@ -26,4 +30,50 @@
   	display: flex;
   	justify-content: space-around;
   }
+}
+
+
+/* === section ====*/
+
+#slider{
+	overflow: hidden;
+	flex-direction: row;
+}
+
+#slider figure{
+	position: relative;
+	width: 500%;
+	margin: 0;
+	left: 0;
+	animation: 20s slider infinite;
+}
+
+#slider figure img {
+	width: 5%;
+	float: left;
+	padding: 10px;
+	border-radius: 100%;
+}
+
+
+@keyframes slider {
+	0%{
+		left: 0;
+	}
+	20%{
+		left: 0;
+	}
+	25%{
+		left: -100%;
+	}
+	45%{
+		left: -100%;
+	}		
+}
+
+button {
+    margin-left: 125px;
+    margin-bottom: 10px;
+    background: #1C8ADE;
+    color: #fff;
 }
