--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -21,7 +21,7 @@
 }
 
 .bg-blue{
-    background-color: #0a25be;
+    background-color: #6177f3;
 }
 
 .bg-darken{
@@ -43,6 +43,32 @@
     height: 6vh;
 }
 
+/* ========= Section de rappel ============== */
+
+.reminder{
+    position: relative;
+    overflow-x: hidden;
+}
+
+.reminder-title{
+    position: absolute;
+}
+
+.reminder-content{
+    width: 500vw;
+}
+
+.reminder-content > p{
+    width: 200vw;
+}
+
+
+/* ==========Section article ======== */
+
+.articles .card img{
+    height: 150px;
+    object-fit: cover;
+}
 /* ============== Profil section ============== */
 
 .game-ranking img{
@@ -51,4 +77,10 @@
     object-fit: cover;
     border: 1.5px solid #0d74eb;
     border-radius: 100px;
+}
+
+/* ============= Section footer =========== */
+
+footer{
+    height: 8vh;
 }
